# pynraw

./: .gitignore  LICENSE  README.md
backend/: app.py  media_library.py  photo_processing.py  pyproject.toml  routes.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/components/: FootprintMap.js  PhotoMap.js
frontend/app/components/gallery/: FilterOptionGroup.js  GroupedGallery.js  MediaViewerModal.js  PhotoCard.js  PhotoGrid.js
frontend/app/constants/: media.js
