[project]
name = "pynraw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exifread>=3.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.18.0",
    "rawpy>=0.24.0",
]
